section small fix

--- a/assets/public/css/backend.css
+++ b/assets/public/css/backend.css
@@ -2154,6 +2154,11 @@ a.il_btn {
   letter-spacing: 0.2em;
   margin-bottom: 2rem;
 }
+@media (max-width: 797.5px) {
+  .il_mi_section.style-1 .il_section_before_title {
+    font-size: 14px;
+  }
+}
 .il_mi_section.style-1 .il_section_title {
   font-size: var(--title-size-3);
   font-weight: 600;
