--- a/assets/src/sass/blocks/multi-images-section.scss
+++ b/assets/src/sass/blocks/multi-images-section.scss
@@ -24,6 +24,9 @@
     font-size: 16px;
     letter-spacing: 0.2em;
     margin-bottom: 2rem;
+    @include tab-max {
+      font-size: 14px;
+    }
   }
   .il_section_title {
     font-size: var(--title-size-3);
